charts/traefik/kustomize/prod/routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: traefik
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "POST"
      - "DELETE"
    accessControlAllowOrigin: "*"
    accessControlAllowHeaders:
      - "x-user-agent"
      - "x-grpc-web"
      - "content-type"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.denolte.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
          namespace: traefik
  tls:
    store: 
      name: default

---
# Schedulytics frontend
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: schedulytics-frontend
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`schedulytics.denolte.com`)
      kind: Rule
      services:
        - name: schedulytics-frontend
          namespace: schedulytics
          port: 80
  tls:
    store: 
      name: default

---
# API of schedulytics server
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: schedulytics-envoy
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.denolte.com`)
      kind: Rule
      services:
        - name: envoy
          namespace: schedulytics
          port: 8020
      middlewares:
        - name: cors
          namespace: traefik
  tls:
    store: 
      name: default

---
# Envoy Admin UI
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: schedulytics-envoy-admin
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`envoy.denolte.com`)
      kind: Rule
      services:
        - name: envoy
          namespace: schedulytics
          port: 9901
  tls:
    store: 
      name: default
